# make-my-trade

./: .gitignore  README.md  main.py  pyproject.toml
backtest/: backtester.py
broker/: alpaca_broker.py  base_broker.py  kraken_broker.py
data/: base_data_fetcher.py  data_cache.py
data/fetchers/: alpaca_fetcher.py  kraken_fetcher.py  polygon_fetcher.py
strategies/: base.py  donchian_atr_strategy.py  donchian_strategy.py  ema_crossover_strategy.py  macd_iv_strategy.py  sma_profit_strategy.py  sma_strategy.py
utilities/: logging.py  utils.py
